[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/build1/ship/ship_atlas.tres" type="Texture" id=1]
[ext_resource path="res://scene/build1/ship/ship.gd" type="Script" id=2]
[ext_resource path="res://scene/build1/Draw/Draw.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/new/icon_png_black_and_white/path6114.png" type="Texture" id=5]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0453258, 0.315909 ), 0.0, 0.0, 0, 0, Vector2( 0.371105, 0.961364 ), 0.0, 0.0, 0, 0, Vector2( 0.895184, 0.836364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "Icon_scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.568627, 0.541176, 0.541176, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/status:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/status:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Ship" type="KinematicBody2D" groups=["ship"]]
position = Vector2( 0, 6 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )
draw = ExtResource( 3 )
top_speed = 192
repair = "res://assets/new/icon_png_black_and_white/path6114.png"
fuel = "res://assets/new/icon_png_black_and_white/path6626.png"
cargo = "res://assets/new/icon_png_black_and_white/path6246.png"
exit = "res://assets/new/icon_png_black_and_white/path6213.png"

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 115 )
emitting = false
amount = 20
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
gravity = Vector2( 0, 0 )
linear_accel = 63.39
radial_accel = 34.97
scale_amount = 14.79
scale_amount_curve = SubResource( 3 )

[node name="choiceSprite" type="Sprite" parent="."]

[node name="shipSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -117, 22, -89, 33, -36, 32, 65, 22, 113, -22, 114, -33, 62, -34, -36, -21, -90 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 102.5, -162.5 )

[node name="Label" type="Label" parent="Node2D"]
margin_left = -47.5
margin_top = 10.0
margin_right = 59.5
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "INDE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Sprite" parent="Node2D"]
position = Vector2( 10, -82.5 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -70 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Icon_scale"
anims/Icon_scale = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout_unmooring"]
